Finalización de microservicios: Estandarizacion de Controllers, Services y Repositories